--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>in.RAHAM</groupId>
 	<artifactId>NETFLIX</artifactId>
@@ -10,11 +10,7 @@
 
 	<properties>
 		<docker.image.prefix>kammana</docker.image.prefix>
-		<sonar.projectKey>NETFLIX</sonar.projectKey>
-		<sonar.host.url>http://35.180.132.231:9000</sonar.host.url>
-		<sonar.login>5190001f00936677bc55fd2591acf33d7c8910a1</sonar.login>
 	</properties>
-
 	<dependencies>
 		<dependency>
 			<groupId>com.oracle.bedrock</groupId>
@@ -28,6 +24,7 @@
 			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
+
 	</dependencies>
 
 	<distributionManagement>
@@ -46,17 +43,9 @@
 		<pluginRepository>
 			<id>maven1</id>
 			<name>Maven.org</name>
-			<url>https://repo1.maven.org/maven2</url>
+			<url>http://repo1.maven.org/maven2</url>
 		</pluginRepository>
 	</pluginRepositories>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.sonarsource.scanner.maven</groupId>
-				<artifactId>sonar-maven-plugin</artifactId>
-				<version>3.11.0.3922</version>
-			</plugin>
-		</plugins>
-	</build>
+
 </project>
